--- a/templates/admin-index.html
+++ b/templates/admin-index.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<head>
-<title>Admin's index page</title>
-</head>
-<body>
-  {{>adminnavpartial}}
-  <h1> Welcome Admin </h1>
-</body>
-</html>
+{{>adminnavpartial}}
 
+
+
+{{>adminnavpartialclose}}  
