--- a/templates/admin-teachers-edit.html
+++ b/templates/admin-teachers-edit.html
@@ -1,22 +1,32 @@
-<!doctype html>
-<head>
-<title>Admin's index page</title>
-</head>
-<body>
- {{>adminnavpartial}}
-  <br>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+ </head>
+ <body>
+  <div class="navbar" style="background-color:orange;color:white;">
+   <h1 style="font-family:serif">EDIT TEACHER ACCOUNT<br/><small>Welcome Admin</small></h1>
 
-  <hr>
-
-<form method="post">
-<br>
-<label> Firstname  <input type="text" name="Firstname" value="{{Firstname}}" required /> </label>
-<br>
-<label> Lastname <input type="text" name="Lastname" value="{{Lastname}}" required /> </label>
-<br>
-<input type="submit" value="Update"/>
-</form>
-
+  </div>
+  <div class="jumbotron container" align="center">
+   <form method="post">
+    <div class="input-group input-group-lg">
+     <span class="input-group-addon">FIRST NAME</span>
+     <input type="text" name="Firstname" value="{{Firstname}}" class="form-control" placeholder="First name here" aria-describedby="sizing-addon1" id="Fname" required />
+     <span class="input-group-addon" id="sizing-addon1" style="color:red;">*</span>
+   </div>
+   <br/>
+   <div class="input-group input-group-lg">
+    <span class="input-group-addon">LAST NAME</span>
+    <input type="text" name="Lastname" value="{{Lastname}}"class="form-control" placeholder="Last name here" aria-describedby="sizing-addon1" id="Lname" required />
+    <span class="input-group-addon" id="sizing-addon1" style="color:red;">*</span>
+   </div>
+   <br/>
+   <input type="submit" style="position:relative;left:-50pt" value="UPDATE"/>
+  </form>
+ </div>
 </body>
 </html>
-
