--- a/templates/student-index.html
+++ b/templates/student-index.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<head>
-<title>Student's index page</title>
-</head>
-<body>
-  {{>studentnavpartial}}
-  <h1> Welcome {{Firstname}} {{Lastname}}</h1>
-</body>
-</html>
+{{>studentnavpartial}}
 
+
+
+{{>studentnavpartialclose}}  
