--- a/templates/admin-batches-view.html
+++ b/templates/admin-batches-view.html
@@ -1,41 +1,55 @@
-<!doctype html>
-<head>
-  <title>Admin's index page</title>
-</head>
-<body>
-  {{>adminnavpartial}}
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+   <style type="text/css">
+    th,td{padding:15px;}
+   </style>
+ </head>
+ <body>
+ <div class="navbar" style="background-color:orange;color:white;">
+  <h1 style="font-family:serif">BATCH VIEW PAGE<br/><small>Welcome Admin</small></h1>
+
+ </div>
 
   <hr>
-<h1> Teacher </h1>
- {{#if teachers}}
-  <ul>
-  {{#teachers}}
-    <li> {{Teachername}}  <a href="/admin/batches/{{../BatchId}}/edit/teacher/{{TeacherId}}"> Edit </a>
-    </li>
-  {{/teachers}}
-  </ul>
-{{/if}}
+<h1 style="position:relative;left:200px"> Teacher  </h1>
+<br/>
+<table style="position:relative;left:200px" id="studtab">
   
 
-<h1> Students </h1>
-<p> <a href="/admin/batches/{{BatchId}}/add/student"> Add </a> </p>
-<br>
-{{#if students}}
+  {{#teachers}}
 
-  <table>
- {{#students}}
+    <tr id="{{QuestionId}}">
+     <th>{{Teachername}}</th>
+     <td align="center"><a href="/admin/batches/{{../BatchId}}/edit/teacher/{{TeacherId}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+    </tr>
+  {{/teachers}}
+  </table>
 
+<br/>
+<br/>
 
-    <tr >
-      <td>{{Studentname}}</td>
-      <td><a href="/admin/batches/{{../BatchId}}/delete/student/{{StudentId}}/"> Delete </a></td>
+<h1 style="position:relative;left:200px"> Students  </h1>
+<br/>
+<table style="position:relative;left:200px" id="studtab">
+  <tr>
+   <th>VIEW</th>
+   <th>DELETE</th>
+   <th><a href="/admin/batches/{{BatchId}}/add/student">ADD<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></th>
+  </tr>
 
+  {{#students}}
+
+    <tr id="{{QuestionId}}">
+     <th>{{Studentname}}</th>
+     <td align="center"><a href="/admin/batches/{{../BatchId}}/delete/student/{{StudentId}}/"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
     </tr>
   {{/students}}
   </table>
-{{/if}}
-
-
 
 </body>
 </html>
