--- a/templates/admin-subjects-add.html
+++ b/templates/admin-subjects-add.html
@@ -1,20 +1,26 @@
-<!doctype html>
-<head>
-<title>Admin's index page</title>
-</head>
-<body>
- {{>adminnavpartial}}
-  <br>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+ </head>
+ <body>
+ <div class="navbar" style="background-color:orange;color:white;">
+  <h1 style="font-family:serif">ADD SUBJECT<br/><small id="sem"><small></h1>
 
-  <hr>
-
-<form method="post">
-<br>
-<label> Subject Name  <input type="text" name="Subjectname" required /> </label>
-<br>
-<input type="submit" value="Add"/>
-</form>
-
+ </div>
+ <div class="jumbotron container">
+  <form method="post">
+    <div class="input-group input-group-lg">
+     <span class="input-group-addon">SUBJECT NAME</span>
+     <input type="text" name="Subjectname" class="form-control" placeholder="Subject name here" aria-describedby="sizing-addon1" id="Fname" required />
+     <span class="input-group-addon" id="sizing-addon1" style="color:red;">*</span>
+    </div>
+    <br/><br/>
+    <input type="submit" value="ADD"/>
+  </form>
+ </div>
 </body>
-</html>
 
