--- a/templates/admin-subjects-view.html
+++ b/templates/admin-subjects-view.html
@@ -1,60 +1,61 @@
-<!doctype html>
-<head>
-  <title>Admin's index page</title>
-</head>
-<body>
-  {{>adminnavpartial}}
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+   <style type="text/css">
+    th,td{padding:15px;}
+   </style>
+ </head>
+ <body>
+ <div class="navbar" style="background-color:orange;color:white;">
+  <h1 style="font-family:serif">SUBJECT VIEW PAGE<br/><small>Welcome Admin</small></h1>
+
+ </div>
 
   <hr>
-<h1> Questions </h1>
+<h1 style="position:relative;left:200px"> Questions  </h1>
+<br/>
+<table style="position:relative;left:200px" id="studtab">
+  <tr>
+   <th>VIEW</th>
+   <th>EDIT</th>
+   <th>DELETE</th>
+   <th><a href="/admin/subjects/{{SubjectId}}/questions/add">ADD<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></th>
+  </tr>
 
-{{#if SubjectId }}  
-  <ul>
-    <li> <a href="/admin/subjects/{{SubjectId}}/questions/add" /> Add  </a> </li>
-  </ul>
-{{/if}}  
+  {{#questions}}
 
-<br>
-{{#if questions}}
-
-  <table>
- {{#questions}}
-
-
-    <tr >
-      <td>{{Question}}</td>
-      <td><a href ="/admin/questions/{{QuestionId}}/edit/"> Edit </a></td>
-      <td><a href ="/admin/questions/{{QuestionId}}/delete/"> Delete </a></td>
-
+    <tr id="{{QuestionId}}">
+     <th>{{Question}}</th>
+     <td align="center"><a href="/admin/questions/{{QuestionId}}/edit/"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+     <td align="center"><a href="/admin/questions/{{QuestionId}}/delete/"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
     </tr>
   {{/questions}}
   </table>
-{{/if}}
 
-<br>
-<h1> Batches </h1>
+<br/>
+<br/>
 
-{{#if SubjectId }}  
-  <ul>
-    <li> <a href="/admin/subjects/{{SubjectId}}/batches/add" /> Add  </a> </li>
-  </ul>
-{{/if}} 
+<h1 style="position:relative;left:200px"> Batches  </h1>
+<br/>
+<table style="position:relative;left:200px" id="studtab">
+  <tr>
+   <th>VIEW</th>
+   <th>DELETE</th>
+   <th><a href="/admin/subjects/{{SubjectId}}/batches/add">ADD<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></th>
+  </tr>
 
-<br>
-{{#if batches}}
+  {{#batches}}
 
- {{#batches}}
-  <table>
-
-    <tr >
-      <td><a href ="/admin/batches/{{BatchId}}"> Batch {{BatchId}}</td>
-      <td><a href ="/admin/batches/{{BatchId}}/delete/"> Delete </a></td>
-
+    <tr id="{{QuestionId}}">
+     <th><a href="/admin/batches/{{BatchId}}">Batch {{BatchId}}</a></th>
+     <td align="center"><a href="/admin/batches/{{BatchId}}/delete/"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
     </tr>
-
   {{/batches}}
   </table>
-{{/if}}
 
 </body>
 </html>
