--- a/templates/admin-teachers-list.html
+++ b/templates/admin-teachers-list.html
@@ -1,28 +1,35 @@
-<!doctype html>
-<head>
-  <title>Admin's index page</title>
-</head>
-<body>
-  {{>adminnavpartial}}
-  <br>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+   <meta charset="utf-8">
+   <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+   <style type="text/css">
+    th,td{padding:15px;}
+   </style>
+ </head>
+ <body>
+ <div class="navbar" style="background-color:orange;color:white;">
+  <h1 style="font-family:serif">TEACHER LIST PAGE<br/><small>Welcome Admin</small></h1>
 
-  <hr>
-  <ul>
-    <li> <a href="teachers/add" /> Add  </a> </li>
-  </ul>
+ </div>
+ <table style="position:absolute;left:200px" id="teachertab">
+  <tr>
+   <th>VIEW</th>
+   <th>EDIT</th>
+   <th>DELETE</th>
+   <th><a href="teachers/add">ADD<span class="glyphicon glyphicon-plus" aria-hidden="true"></span></th>
+  </tr>
 
-  <table>
-
-    {{#teachers}}
+  {{#teachers}}
     <tr id="{{TeacherId}}">
-      <td><a href="/admin/teachers/{{TeacherId}}">{{Firstname}}</a></td>
-      <td><a href="/admin/teachers/{{TeacherId}}">{{Lastname}}</a></td>
-      <td><a href="/admin/teachers/{{TeacherId}}/edit"> Edit </a></td>
-      <td><a href="/admin/teachers/{{TeacherId}}/delete"> Delete </a></td>
+     <th><a href="/admin/teachers/{{TeacherId}}">{{Firstname}} {{Lastname}}</a></th>
+     <td align="center"><a href="/admin/teachers/{{TeacherId}}/edit"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+     <td align="center"><a href="/admin/teachers/{{TeacherId}}/delete"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
     </tr>
+  {{/teachers}}
 
-    {{/teachers}}
-  </table>
+ </table>
 </body>
 </html>
-
