--- a/templates/partials/teachernavpartial.html
+++ b/templates/partials/teachernavpartial.html
@@ -1,6 +1,59 @@
-<h1> Student's Main Page </h1>
-<ul>
-  <li> <a href="/teacher/{{TeacherId}}/logout" /> Logout </a> </li>
-  <li> <a href="/teacher/{{TeacherId}}/batches"/> Batches </a> </li>
-</ul>
-<br>
+<html>
+<head>
+  <meta charset="utf-8"/>
+  <title>BMSCE LAB MANAGEMENT SYSTEM</title>
+ <link rel="stylesheet" href="/bootstrap.min.css">
+  <script src="/jquery.min.js"></script>
+  <script src="/bootstrap.min.js"></script>
+ 
+  <style type="text/css">
+    h5{color:red;}
+  </style>
+</head>
+
+<body style="background-color:LightGray" >
+
+  <div class="navbar container-fluid" style="background-color:green;">
+    
+    <a href="admin.html">
+      <img src="/bms_logo.jpg" width="118px" style="position:absolute;top=10px;left:0px">
+    </a>
+
+    <div class="container">
+      <h2 style="color:white;position:relative;top:0px;left:70px;">TEACHERS PAGE</h2>
+     
+      <div class="nav navbar-right">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#home"><h6><b>HOME</b></h6></a></li>
+          <li><a data-toggle="tab" href="#batch"><h6><b>BATCHES</b></h6></a></li>
+          <li><a data-toggle="tab" href="#logout"><h6><b>LOGOUT</b></h6></a></li>
+        </ul>
+      </div>
+
+    </div>
+  
+  </div>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active jumbotron">
+      <h1 align="center">WELCOME {{Firstname}} {{Lastname}}!!<h1>
+    </div>
+
+    <div id="batch" class="tab-pane fade in jumbotron container">
+        <p style="font-size:30pt"><strong>View Batches, Questions and Students </strong></p>
+        <p><a target="_blank" href="/teacher/{{TeacherId}}/batches">Click Here</a></p>
+    </div>
+
+    <div id="logout" class="tab-pane fade in jumbotron container">
+      <p style="font-size:30pt"><strong>Logout Teacher Account</strong></p>
+      <p><a target="_blank" href="/teacher/{{TeacherId}}/logout">Click Here</a></p>
+    </div>
+  </div>
+
+<script>
+$(document).ready(function(){
+    $(".nav-tabs a").click(function(){
+        $(this).tab('show');
+    });
+});
+</script>
