--- a/templates/teacher-index.html
+++ b/templates/teacher-index.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<head>
-<title>Student's index page</title>
-</head>
-<body>
-  {{>teachernavpartial}}
-  <h1> Welcome {{Firstname}} {{Lastname}}</h1>
-</body>
-</html>
+{{>teachernavpartial}}
 
+
+
+{{>teachernavpartialclose}}  
